# VLQ

./: .clang-complete  .gitignore  CMakeLists.txt
include/VLQ/: VLQ.h
src/: VLQ.c  main.c
